style: use ubuntu font to avoid baseline misalignment

--- a/gui/src/global.css
+++ b/gui/src/global.css
@@ -1,4 +1,6 @@
 * {
+  font-family: -apple-system, BlinkMacSystemFont, Ubuntu, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji',
+    'Segoe UI Emoji', 'Segoe UI Symbol';
   cursor: default !important;
   -webkit-user-select: none;
   user-select: none;
